# celer

./: .gitignore  LICENSE  README.md  TODO.md  build.sh  cceler.toml  generate_readme.go  go.mod  go.sum  main.go
binarycache/: cache.go  divider.go
buildsystems/: build_b2.go  build_bazel.go  build_bazel_toolchain.go  build_bazel_toolchain_clang.go  build_bazel_toolchain_gcc.go  build_bazel_toolchain_msvc.go  build_cmake.go  build_custom.go  build_freestyle.go  build_gyp.go  build_makefiles.go  build_meson.go  build_msbuild.go  build_ninja.go  build_nobuild.go  build_prebuild.go  build_prebuilt.go  build_qmake.go  buildconfig.go  buildconfig_envs.go  buildconfig_hook_events.go  buildconfig_hooks.go  buildconfig_merge.go  buildconfig_merge_platform.go  crosstools.go  express_vars.go  fixup_pkgconfig_file.go  fixup_pkgconfig_file_test.go  native_toolchain.go  toolchain.go  toolchain_native.go  variables.go
buildtools/: build_tools.go  setup_msys2.go  setup_python.go  setup_python3.go  system_tools.go
caches/: buildcache.go  divider.go
cmds/: cmd_Integrate.go  cmd_about.go  cmd_autoremove.go  cmd_autoremove_test.go  cmd_clean.go  cmd_clean_test.go  cmd_configure.go  cmd_configure_test.go  cmd_create.go  cmd_create_test.go  cmd_depend.go  cmd_depend_test.go  cmd_deploy.go  cmd_deploy_test.go  cmd_init.go  cmd_init_test.go  cmd_install.go  cmd_install_binarycache_test.go  cmd_install_buildsystems_test.go  cmd_install_buildsystems_ubuntu_amd64_clang_test.go  cmd_install_buildsystems_ubuntu_amd64_gcc_test.go  cmd_install_buildsystems_ubuntu_amd64_test.go  cmd_install_buildsystems_ubuntu_arm64_gcc_test.go  cmd_install_buildsystems_windows_amd64_clang_cl_test.go  cmd_install_buildsystems_windows_amd64_msvc_test.go  cmd_install_buildsystems_windows_amd64_test.go  cmd_install_buildtype_test.go  cmd_install_cachedir_test.go  cmd_install_command_test.go  cmd_install_force_recurse_test.go  cmd_install_from_package_test.go  cmd_install_gen_cmake_config_test.go  cmd_install_gen_cmake_test.go  cmd_install_package_cache_test.go  cmd_install_pkgcache_artifact_test.go  cmd_install_pkgcache_test.go  cmd_install_ubuntu_aarch64_gcc_test.go  cmd_install_ubuntu_amd64_clang_test.go  cmd_install_ubuntu_amd64_gcc_test.go  cmd_install_ubuntu_arm64_gcc_test.go  (+28 more)
cmds/testdata/gen_cmake_config/components/: CMakeLists.txt
cmds/testdata/gen_cmake_configs_prebuilt/interface/: CMakeLists.txt
completion/: bash.go  bash_test.go  completion.go  powershell.go  powershell_test.go  zsh.go  zsh_test.go
configs/: .gitignore  binary_cache.go  build_tools_versions.go  caches.go  ccache.go  ccache_test.go  celer.go  celer_context.go  celer_test.go  celer_toolchain_file.go  celer_update.go  configure_buildtype_test.go  configure_cachedir_test.go  configure_jobnum_test.go  configure_offline_test.go  configure_optimizationlevel_test.go  configure_platform_test.go  configure_project_test.go  configure_proxy_test.go  configure_test.go  configure_verbose_test.go  create_platform_test.go  create_project_test.go  errors.go  express_vars.go  format.go  install_report.go  package_cache.go  package_cache_test.go  pkgcache.go  pkgcache_artifact_test.go  pkgcache_config.go  pkgcache_download_test.go  pkgcache_repo_test.go  pkgcache_target_test.go  platform.go  platform_checksums.go  port.go  port_binary_caches.go  port_buildconfig.go  (+22 more)
context/: cachedir.go  context.go  expr_vars.go  platform.go  port.go  project.go
depcheck/: depcheck.go  depcheck_circular_test.go  depcheck_conflict_test.go
envs/: unix.go  (+1 more)
generator/templates/components/: CMakeLists.txt  CMakeLists.txt.in  Component.cmake.in
(+370 files in other folders)
